fix: improve coding practice execution